maquetado de sección team1VSteam2

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="multimedia/icono.jpg" type="imagen/jpg">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -43,7 +44,49 @@
             </div>
         </div>
     </div>
-
+    <!-- <div class="container">
+        <div class="row2">
+            <div class="col2">
+                <div class="teamVs">
+                    <span class="puntaje">4 - 1</span>
+                    <div class="team1">
+                        <div class="teamDetalle">
+                            <img class="teamImg" src="multimedia/infamus.png" alt="">
+                            <h3>INFAMUS <samp>(Win)</samp> </h3>
+                            <ul class="jugadores">
+                                <li class="jugador">Jose Ramonez (7)</li>
+                                <li class="jugador">Eadie Salinas (12)</li>
+                                <li class="jugador">Ashton Allen (10)</li>
+                                <li class="jugador">Baxter Metcalfe (5)</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="team2">
+                        <div class="teamDetalle">
+                            <img class="teamImg" src="multimedia/onuba.png" alt="">
+                            <h3>ONUBA<samp>(Lost)</samp> </h3>
+                            <ul class="jugadores">
+                                <li class="jugador">Macauly Green (3)</li>
+                                <li class="jugador">Arham Stark (8)</li>
+                                <li class="jugador">Stephan Murillo (9)</li>
+                                <li class="jugador">Ned Ritter (5)</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> -->
+    <div class="noticias">
+        <div class="container">
+            <div class="row2">
+                <div class="col2">
+                    <h2 class="ultimasNoticias">Ultimos torneos</h2>
+                    <div class="row"></div>
+                </div>
+            </div>
+        </div>
+    </div>
     <footer>
 
     </footer>
