cambios hero section

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
         </div>
     </div> -->
-    <div class="noticias">
+    <!-- <div class="noticias">
         <div class="container">
             <div class="row2">
                 <div class="col2">
@@ -86,9 +86,8 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <footer>
-
     </footer>
 </body>
 </html>
