--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="icon" href="multimedia/icono.jpg" type="imagen/jpg">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <title>Kuga Esports</title>
     <!-- https://preview.colorlib.com/theme/soccer/index.html -->
 </head>
 <body>
+    <!-- Navegador principal -->
     <header>
         <div class="container">
             <div class="navBar">
@@ -31,6 +32,7 @@
             </div>
         </div>
     </header>
+    <!-- Sección Heroe -->
     <div class="hero overlay" style="background-image: url(https://rocketleague.media.zestyio.com/rl_home_f2p-launch_shop_10367.jpg); background-size: cover;">
     <div class="container">
         <div class="row">
@@ -44,7 +46,8 @@
             </div>
         </div>
     </div>
-    <!-- <div class="container">
+    <!-- Sección Torneos -->
+    <div class="container">
         <div class="row2">
             <div class="col2">
                 <div class="teamVs">
@@ -76,18 +79,46 @@
                 </div>
             </div>
         </div>
-    </div> -->
-    <!-- <div class="noticias">
+    </div>
+    <!-- Sección Noticias -->
+    <div class="noticias">
         <div class="container">
-            <div class="row2">
-                <div class="col2">
-                    <h2 class="ultimasNoticias">Ultimos torneos</h2>
-                    <div class="row"></div>
+            <div class="row1">
+                <div class="seccionTitular">
+                    <h2 class="titular">Ultimos torneos</h2>
+                </div>
+                <div class="rowNoticias">
+                    <div class="noticiaAnterior">
+                        <div class="posteo">
+                            <a href="#">
+                                <img class="imgNoticias" src="https://wallpapercave.com/wp/wp6404236.png" alt="">
+                            </a>
+                            <div class="textoNoticia">
+                                <div class="tituloNoticia">
+                                    <h3 class="h3Noticia">El equipo está abierto a explorar nuevas oportunidades</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="noticiaAnterior">
+                        <div class="posteo">
+                            <a href="#">
+                                <img class="imgNoticias" src="https://i.redd.it/3jwmfj9pi5021.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="noticiaAnterior">
+                        <div class="posteo">
+                            <a href="#">
+                                <img class="imgNoticias" src="https://preview.colorlib.com/theme/soccer/images/ximg_1.jpg.pagespeed.ic.EE1gbiNkYl.webp" alt="">
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div> -->
-    <footer>
+    </div>
+        <footer>
     </footer>
 </body>
 </html>
