--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
     </div>
     <!-- Sección Torneos -->
-    <div class="container">
+    <div class="container" style="transform: translateY(13.3553px);">
         <div class="row2">
             <div class="col2">
                 <div class="teamVs">
