creación de contador

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </head>
 <body>
     <!-- Navegador principal -->
-    <header>
+    <div class="siteWarp">
+    <header class="siteNavbar" role="banner">
         <div class="container">
             <div class="navBar">
                 <h2 class="logo"><a class="logoLink" href="https://discord.com/channels/777969701862637638/777969703317536849" target="_blank">KUGA</a></h2>
@@ -34,20 +35,22 @@
     </header>
     <!-- Sección Heroe -->
     <div class="hero overlay" style="background-image: url(https://rocketleague.media.zestyio.com/rl_home_f2p-launch_shop_10367.jpg); background-size: cover;">
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <h1>LATINOAMERICA LEAGUE 3V3</h1>
-                <p>¡Prepárate para sentir la energía competitiva de lo que es jugar a Rocket League Esports!</p>
-                <p>
-                    <a href="#" class="boton">ANOTARSE</a>
-                    <a class="sinFondo" href="#" target="">REGLAMENTO</a>
-                </p>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h1>SUDAMERICA LEAGUE 3V3</h1>
+                    <p>¡Prepárate para sentir la energía competitiva de lo que es jugar a Rocket League Esports!</p>
+                    <div id="cuenta"></div>
+                    <p>
+                        <a href="#" class="boton">ANOTARSE</a>
+                        <a class="sinFondo" href="#" target="">REGLAMENTO</a>
+                    </p>
+                </div>
             </div>
         </div>
     </div>
     <!-- Sección Torneos -->
-    <div class="container" style="transform: translateY(13.3553px);">
+    <!-- <div class="container" style="transform: translateY(13.3553px);">
         <div class="row2">
             <div class="col2">
                 <div class="teamVs">
@@ -79,7 +82,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Sección Noticias -->
     <div class="noticias">
         <div class="container">
@@ -120,5 +123,8 @@
     </div>
         <footer>
     </footer>
+</div>
+<script src="js/simplyCountdown.min.js"></script>
+<script src="js/countdown.js"></script>
 </body>
 </html>
