--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 <body>
     <!-- Navegador principal -->
     <div class="siteWarp">
-    <header class="siteNavbar" role="banner">
-        <div class="container">
-            <div class="navBar">
-                <h2 class="logo"><a class="logoLink" href="https://discord.com/channels/777969701862637638/777969703317536849" target="_blank">KUGA</a></h2>
-                <P class="esport">esports</P>
-                <div class="mlAuto">
+        <header class="siteNavbar" role="banner">
+            <div class="container">
+                <div class="navBar">
+                    <h2 class="logo"><a class="logoLink" href="https://discord.com/channels/777969701862637638/777969703317536849" target="_blank">KUGA</a></h2>
+                    <P class="esport">esports</P>
+                    <div class="mlAuto">
                     <nav>
                         <ul class="nav">
                             <li class="navLi"><a href="index.html" class="navLink">HOME</a></li>
@@ -28,6 +28,11 @@
                             <li class="navLi"><a href="#" class="navLinks">BLOG</a></li>
                             <li class="navLi"><a href="#" class="navLinks">CONTACTO</a></li>
                         </ul>
+                    </div>
+                    <span class="puntaje">
+                        <img class="flecha" src="multimedia/flecha-correcta (2).png">
+                        <img class="flecha2" src="multimedia/flecha-correcta (2).png">
+                    </span>
                     </nav>
                 </div>
             </div>
@@ -49,6 +54,7 @@
             </div>
         </div>
     </div>
+    <div class="hero1" >
     <!-- Sección Torneos -->
     <!-- <div class="container" style="transform: translateY(13.3553px);">
         <div class="row2">
@@ -88,22 +94,24 @@
         <div class="container">
             <div class="row1">
                 <div class="seccionTitular">
-                    <h2 class="titular">Ultimos torneos</h2>
+                    <h2 class="titular">PREMIOS</h2>
                 </div>
                 <div class="rowNoticias">
                     <div class="noticiaAnterior">
                         <div class="posteo">
                             <a href="#">
-                                <img class="imgNoticias" src="https://wallpapercave.com/wp/wp6404236.png" alt="">
+                                <img class="imgNoticias" src="https://i.redd.it/3jwmfj9pi5021.png" alt="">
                             </a>
                             <div class="textoNoticia">
                                 <div class="tituloNoticia">
-                                    <h3 class="h3Noticia">El equipo está abierto a explorar nuevas oportunidades</h3>
+                                    <h3 class="h3Noticia">Disfruta de las recompensas por la victoria</h3>
                                 </div>
                             </div>
                         </div>
+                        <!-- <span class="puntaje1">4 - 1</span> -->
+                        
                     </div>
-                    <div class="noticiaAnterior">
+                    <!-- <div class="noticiaAnterior">
                         <div class="posteo">
                             <a href="#">
                                 <img class="imgNoticias" src="https://i.redd.it/3jwmfj9pi5021.png" alt="">
@@ -116,13 +124,55 @@
                                 <img class="imgNoticias" src="https://preview.colorlib.com/theme/soccer/images/ximg_1.jpg.pagespeed.ic.EE1gbiNkYl.webp" alt="">
                             </a>
                         </div>
-                    </div>
+                    </div> -->
+                    <span class="puntaje">
+                        <img class="flecha" src="multimedia/flecha-correcta (2).png">
+                        <img class="flecha2" src="multimedia/flecha-correcta (2).png">
+                    </span>
+                    
                 </div>
             </div>
         </div>
     </div>
         <footer>
     </footer>
+</div>
+</div>
+<div class="hero1" style="background-image: url(https://rocketleague.media.zestyio.com/rl_platform_keyart_2019.f1cb27a519bdb5b6ed34049a5b86e317.jpg); background-size: cover;">
+    <div class="container">
+        <div class="row1">
+            <div class="seccionTitular">
+            </div>
+            <div class="rowNoticias">
+                <div class="noticiaAnterior">
+                    <div class="posteo">
+                        <a href="#">
+                            <img class="imgNoticias" src="https://i.redd.it/3jwmfj9pi5021.png" alt="">
+                        </a>
+                        <div class="textoNoticia">
+                            <div class="tituloNoticia">
+                                <h3 class="h3Noticia">Disfruta de las recompensas por la victoria</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- <span class="puntaje1">4 - 1</span> -->
+                </div>
+                <div class="noticiaAnterior">
+                    <div class="posteo">
+                        <a href="#">
+                            <img class="imgNoticias" src="https://i.redd.it/3jwmfj9pi5021.png" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="noticiaAnterior">
+                    <div class="posteo">
+                        <a href="#">
+                            <img class="imgNoticias" src="https://i.redd.it/3jwmfj9pi5021.png" alt="">
+                        </a>
+                    </div>
+</div>
+<div class="hero2" >
+    <hr>
 </div>
 <script src="js/simplyCountdown.min.js"></script>
 <script src="js/countdown.js"></script>
