ultima versión nada nuevo

--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
                     <h2 class="logo"><a class="logoLink" href="https://discord.com/channels/777969701862637638/777969703317536849" target="_blank">KUGA</a></h2>
                     <P class="esport">esports</P>
                     <div class="mlAuto">
-                    <nav>
-                        <ul class="nav">
-                            <li class="navLi"><a href="index.html" class="navLink">HOME</a></li>
-                            <li class="navLi"><a href="#" class="navLinks">PARTIDAS</a></li>
-                            <li class="navLi"><a href="#" class="navLinks">JUGADORES</a></li>
-                            <li class="navLi"><a href="#" class="navLinks">BLOG</a></li>
-                            <li class="navLi"><a href="#" class="navLinks">CONTACTO</a></li>
-                        </ul>
+                        <nav>
+                            <ul class="nav">
+                                <li class="navLi"><a href="index.html" class="navLinks">HOME</a></li>
+                                <li class="navLi"><a href="#" class="navLink">TORNEOS</a></li>
+                                <li class="navLi"><a href="#" class="navLinks">JUGADORES</a></li>
+                                <li class="navLi"><a href="#" class="navLinks">BLOG</a></li>
+                                <li class="navLi"><a href="#" class="navLinks">CONTACTO</a></li>
+                            </ul>
+                        </nav>
                     </div>
                     <span class="puntaje">
                         <img class="flecha" src="multimedia/flecha-correcta (2).png">
                         <img class="flecha2" src="multimedia/flecha-correcta (2).png">
                     </span>
-                    </nav>
                 </div>
             </div>
-        </div>
-    </header>
+        </header>
+    </div>
     <!-- Sección Heroe -->
     <div class="hero overlay" style="background-image: url(https://rocketleague.media.zestyio.com/rl_home_f2p-launch_shop_10367.jpg); background-size: cover;">
         <div class="container">
@@ -55,126 +55,157 @@
         </div>
     </div>
     <div class="hero1" >
-    <!-- Sección Torneos -->
-    <!-- <div class="container" style="transform: translateY(13.3553px);">
-        <div class="row2">
-            <div class="col2">
-                <div class="teamVs">
-                    <span class="puntaje">4 - 1</span>
-                    <div class="team1">
-                        <div class="teamDetalle">
-                            <img class="teamImg" src="multimedia/infamus.png" alt="">
-                            <h3>INFAMUS <samp>(Win)</samp> </h3>
-                            <ul class="jugadores">
-                                <li class="jugador">Jose Ramonez (7)</li>
-                                <li class="jugador">Eadie Salinas (12)</li>
-                                <li class="jugador">Ashton Allen (10)</li>
-                                <li class="jugador">Baxter Metcalfe (5)</li>
-                            </ul>
-                        </div>
+        <div class="noticias">
+            <div class="container">
+                <div class="row1">
+                    <div class="seccionTitular">
+                        <h2 class="titular">PREMIOS</h2>
                     </div>
-                    <div class="team2">
-                        <div class="teamDetalle">
-                            <img class="teamImg" src="multimedia/onuba.png" alt="">
-                            <h3>ONUBA<samp>(Lost)</samp> </h3>
-                            <ul class="jugadores">
-                                <li class="jugador">Macauly Green (3)</li>
-                                <li class="jugador">Arham Stark (8)</li>
-                                <li class="jugador">Stephan Murillo (9)</li>
-                                <li class="jugador">Ned Ritter (5)</li>
-                            </ul>
+                    <div class="rowNoticias">
+                        <div class="noticiaAnterior">
+                            <div class="posteo">
+                                <a href="#">
+                                    <img class="imgNoticias" src="https://i.redd.it/3jwmfj9pi5021.png" alt="">
+                                </a>
+                                <div class="textoNoticia">
+                                    <div class="tituloNoticia">
+                                        <h3 class="h3Noticia">Disfruta de las recompensas por la victoria</h3>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
+                        <span class="puntaje">
+                            <img class="flecha" src="multimedia/flecha-correcta (2).png">
+                            <img class="flecha2" src="multimedia/flecha-correcta (2).png">
+                        </span>
                     </div>
                 </div>
             </div>
         </div>
-    </div> -->
-    <!-- Sección Noticias -->
-    <div class="noticias">
+    </div>
+    <!-- Sección 2 -->
+    <div class="hero1" style="background-image: url(https://rocketleague.media.zestyio.com/rl_platform_keyart_2019.f1cb27a519bdb5b6ed34049a5b86e317.jpg); background-size: cover;">
         <div class="container">
             <div class="row1">
                 <div class="seccionTitular">
-                    <h2 class="titular">PREMIOS</h2>
+                    <h2 class="titular1">OTROS TORNEOS</h2>
                 </div>
                 <div class="rowNoticias">
                     <div class="noticiaAnterior">
                         <div class="posteo">
                             <a href="#">
-                                <img class="imgNoticias" src="https://i.redd.it/3jwmfj9pi5021.png" alt="">
+                                <img class="imgNoticias" src="https://i.pinimg.com/originals/93/37/2a/93372a6264757360557458086fdd81c4.png" alt="">
                             </a>
                             <div class="textoNoticia">
                                 <div class="tituloNoticia">
-                                    <h3 class="h3Noticia">Disfruta de las recompensas por la victoria</h3>
+                                    <h3 class="h3Noticia">KUGA CSGO GRANDMASTERS <br> | 23 y 24 de ABRIL |</h3>
                                 </div>
                             </div>
-                        </div>
-                        <!-- <span class="puntaje1">4 - 1</span> -->
-                        
-                    </div>
-                    <!-- <div class="noticiaAnterior">
-                        <div class="posteo">
-                            <a href="#">
-                                <img class="imgNoticias" src="https://i.redd.it/3jwmfj9pi5021.png" alt="">
-                            </a>
                         </div>
                     </div>
                     <div class="noticiaAnterior">
                         <div class="posteo">
                             <a href="#">
-                                <img class="imgNoticias" src="https://preview.colorlib.com/theme/soccer/images/ximg_1.jpg.pagespeed.ic.EE1gbiNkYl.webp" alt="">
+                                <img class="imgNoticias" src="https://www.mordeo.org/files/uploads/2017/11/Aatrox-League-of-Legends-HD-Mobile-Wallpaper-950x1520.jpg" alt="">
                             </a>
+                            <div class="textoNoticia">
+                                <div class="tituloNoticia">
+                                    <h3 class="h3Noticia">PROXIMAMENTE</h3>
+                                </div>
+                            </div>
                         </div>
-                    </div> -->
-                    <span class="puntaje">
-                        <img class="flecha" src="multimedia/flecha-correcta (2).png">
-                        <img class="flecha2" src="multimedia/flecha-correcta (2).png">
-                    </span>
-                    
+                    </div>
+                    <div class="noticiaAnterior">
+                        <div class="posteo">
+                            <a href="#">
+                                <img class="imgNoticias" src="https://i.pinimg.com/originals/39/0e/fa/390efabcf86b73f7497c6d4f027c7757.jpg" alt="">
+                            </a>
+                            <div class="textoNoticia">
+                                <div class="tituloNoticia">
+                                    <h3 class="h3Noticia">PROXIMAMENTE</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-        <footer>
-    </footer>
-</div>
-</div>
-<div class="hero1" style="background-image: url(https://rocketleague.media.zestyio.com/rl_platform_keyart_2019.f1cb27a519bdb5b6ed34049a5b86e317.jpg); background-size: cover;">
-    <div class="container">
-        <div class="row1">
-            <div class="seccionTitular">
-            </div>
-            <div class="rowNoticias">
-                <div class="noticiaAnterior">
-                    <div class="posteo">
-                        <a href="#">
-                            <img class="imgNoticias" src="https://i.redd.it/3jwmfj9pi5021.png" alt="">
-                        </a>
-                        <div class="textoNoticia">
-                            <div class="tituloNoticia">
-                                <h3 class="h3Noticia">Disfruta de las recompensas por la victoria</h3>
+    <!-- Sección 3 -->
+    <div class="hero2" >
+        <div class="container" style="transform: translateY(13.3553px);">
+            <div class="row2">
+                <div class="col2">
+                    <div class="teamVs">
+                        <span class="puntaje">4 - 1</span>
+                        <div class="team1">
+                            <div class="teamDetalle">
+                                <img class="teamImg" src="multimedia/infamus.png" alt="">
+                                <h3>INFAMUS <samp>(Win)</samp> </h3>
+                                <ul class="jugadores">
+                                    <li class="jugador">Jose Ramonez (7)</li>
+                                    <li class="jugador">Eadie Salinas (12)</li>
+                                    <li class="jugador">Ashton Allen (10)</li>
+                                    <li class="jugador">Baxter Metcalfe (5)</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="team2">
+                            <div class="teamDetalle">
+                                <img class="teamImg" src="multimedia/onuba.png" alt="">
+                                <h3>ONUBA<samp>(Lost)</samp> </h3>
+                                <ul class="jugadores">
+                                    <li class="jugador">Macauly Green (3)</li>
+                                    <li class="jugador">Arham Stark (8)</li>
+                                    <li class="jugador">Stephan Murillo (9)</li>
+                                    <li class="jugador">Ned Ritter (5)</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
-                    <!-- <span class="puntaje1">4 - 1</span> -->
                 </div>
-                <div class="noticiaAnterior">
-                    <div class="posteo">
-                        <a href="#">
-                            <img class="imgNoticias" src="https://i.redd.it/3jwmfj9pi5021.png" alt="">
-                        </a>
-                    </div>
-                </div>
-                <div class="noticiaAnterior">
-                    <div class="posteo">
-                        <a href="#">
-                            <img class="imgNoticias" src="https://i.redd.it/3jwmfj9pi5021.png" alt="">
-                        </a>
-                    </div>
-</div>
-<div class="hero2" >
-    <hr>
-</div>
-<script src="js/simplyCountdown.min.js"></script>
-<script src="js/countdown.js"></script>
+            </div>
+        </div>
+    </div>
+    <script src="js/simplyCountdown.min.js"></script>
+    <script src="js/countdown.js"></script>
 </body>
 </html>
+
+
+
+<!-- Sección Torneos -->
+<!-- <div class="container" style="transform: translateY(13.3553px);">
+    <div class="row2">
+        <div class="col2">
+            <div class="teamVs">
+                <span class="puntaje">4 - 1</span>
+                <div class="team1">
+                    <div class="teamDetalle">
+                        <img class="teamImg" src="multimedia/infamus.png" alt="">
+                        <h3>INFAMUS <samp>(Win)</samp> </h3>
+                        <ul class="jugadores">
+                            <li class="jugador">Jose Ramonez (7)</li>
+                            <li class="jugador">Eadie Salinas (12)</li>
+                            <li class="jugador">Ashton Allen (10)</li>
+                            <li class="jugador">Baxter Metcalfe (5)</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="team2">
+                    <div class="teamDetalle">
+                        <img class="teamImg" src="multimedia/onuba.png" alt="">
+                        <h3>ONUBA<samp>(Lost)</samp> </h3>
+                        <ul class="jugadores">
+                            <li class="jugador">Macauly Green (3)</li>
+                            <li class="jugador">Arham Stark (8)</li>
+                            <li class="jugador">Stephan Murillo (9)</li>
+                            <li class="jugador">Ned Ritter (5)</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div> -->
+<!-- Sección Noticias -->
