actualización ultima reunión

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Kuga Esports</title>
     <!-- https://preview.colorlib.com/theme/soccer/index.html -->
 </head>
-<body>
+<body onscroll="scrollpos()">
     <!-- Navegador principal -->
     <div class="siteWarp">
         <header class="siteNavbar" role="banner">
@@ -24,13 +24,13 @@
                             <ul class="nav">
                                 <li class="navLi"><a href="index.html" class="navLinks">HOME</a></li>
                                 <li class="navLi"><a href="#" class="navLink">TORNEOS</a></li>
-                                <li class="navLi"><a href="#" class="navLinks">JUGADORES</a></li>
-                                <li class="navLi"><a href="#" class="navLinks">BLOG</a></li>
+                                <li class="navLi"><a href="#" class="navLinks">EQUIPOS</a></li>
+                                <li class="navLi"><a href="#" class="navLinks">NOTICIAS</a></li>
                                 <li class="navLi"><a href="#" class="navLinks">CONTACTO</a></li>
                             </ul>
                         </nav>
                     </div>
-                    <span class="puntaje">
+                    <span class="puntaje1">
                         <img class="flecha" src="multimedia/flecha-correcta (2).png">
                         <img class="flecha2" src="multimedia/flecha-correcta (2).png">
                     </span>
@@ -74,16 +74,17 @@
                                 </div>
                             </div>
                         </div>
-                        <span class="puntaje">
-                            <img class="flecha" src="multimedia/flecha-correcta (2).png">
-                            <img class="flecha2" src="multimedia/flecha-correcta (2).png">
-                        </span>
+                        
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <!-- Sección 2 -->
+    <div class="sticky">
+        <img class="flecha12" src="multimedia/flecha-correcta (2).png">
+        <img class="flecha13" src="multimedia/flecha-correcta (2).png">
+    </div>
     <div class="hero1" style="background-image: url(https://rocketleague.media.zestyio.com/rl_platform_keyart_2019.f1cb27a519bdb5b6ed34049a5b86e317.jpg); background-size: cover;">
         <div class="container">
             <div class="row1">
@@ -133,39 +134,6 @@
     </div>
     <!-- Sección 3 -->
     <div class="hero2" >
-        <div class="container" style="transform: translateY(13.3553px);">
-            <div class="row2">
-                <div class="col2">
-                    <div class="teamVs">
-                        <span class="puntaje">4 - 1</span>
-                        <div class="team1">
-                            <div class="teamDetalle">
-                                <img class="teamImg" src="multimedia/infamus.png" alt="">
-                                <h3>INFAMUS <samp>(Win)</samp> </h3>
-                                <ul class="jugadores">
-                                    <li class="jugador">Jose Ramonez (7)</li>
-                                    <li class="jugador">Eadie Salinas (12)</li>
-                                    <li class="jugador">Ashton Allen (10)</li>
-                                    <li class="jugador">Baxter Metcalfe (5)</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="team2">
-                            <div class="teamDetalle">
-                                <img class="teamImg" src="multimedia/onuba.png" alt="">
-                                <h3>ONUBA<samp>(Lost)</samp> </h3>
-                                <ul class="jugadores">
-                                    <li class="jugador">Macauly Green (3)</li>
-                                    <li class="jugador">Arham Stark (8)</li>
-                                    <li class="jugador">Stephan Murillo (9)</li>
-                                    <li class="jugador">Ned Ritter (5)</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
     <script src="js/simplyCountdown.min.js"></script>
     <script src="js/countdown.js"></script>
