--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
         <header class="siteNavbar" role="banner">
             <div class="container">
                 <div class="navBar">
+                    <div class="backSticky">
                     <h2 class="logo"><a class="logoLink" href="https://discord.com/channels/777969701862637638/777969703317536849" target="_blank">KUGA</a></h2>
                     <P class="esport">esports</P>
+                    </div>
                     <div class="mlAuto">
                         <nav>
                             <ul class="nav">
@@ -41,6 +43,7 @@
     <!-- Sección Heroe -->
     <div class="hero overlay" style="background-image: url(https://rocketleague.media.zestyio.com/rl_home_f2p-launch_shop_10367.jpg); background-size: cover;">
         <div class="container">
+            <div class="backSticky1">
             <div class="row">
                 <div class="col">
                     <h1>SUDAMERICA LEAGUE 3V3</h1>
@@ -52,6 +55,7 @@
                     </p>
                 </div>
             </div>
+        </div>
         </div>
     </div>
     <div class="hero1" >
