--- a/index.html
+++ b/index.html
@@ -84,11 +84,13 @@
             </div>
         </div>
     </div>
-    <!-- Sección 2 -->
+    <div class="fan">
     <div class="sticky">
         <img class="flecha12" src="multimedia/flecha-correcta (2).png">
         <img class="flecha13" src="multimedia/flecha-correcta (2).png">
     </div>
+    </div>
+    <!-- Sección 2 -->
     <div class="hero1" style="background-image: url(https://rocketleague.media.zestyio.com/rl_platform_keyart_2019.f1cb27a519bdb5b6ed34049a5b86e317.jpg); background-size: cover;">
         <div class="container">
             <div class="row1">
