--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </div>
         </div>
     </div>
-    <div class="fan">
+    <div class="stickyFan">
     <div class="sticky">
         <img class="flecha12" src="multimedia/flecha-correcta (2).png">
         <img class="flecha13" src="multimedia/flecha-correcta (2).png">
