testing hover efect

--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
                         </nav>
                     </div>
                     <span class="puntaje1">
-                        <img class="flecha" src="multimedia/flecha-correcta (2).png">
-                        <img class="flecha2" src="multimedia/flecha-correcta (2).png">
+                        <img class="flecha" src="multimedia/Logo Relleno Naranja.png">
                     </span>
                 </div>
             </div>
@@ -86,8 +85,7 @@
     </div>
     <div class="stickyFan">
     <div class="sticky">
-        <img class="flecha12" src="multimedia/flecha-correcta (2).png">
-        <img class="flecha13" src="multimedia/flecha-correcta (2).png">
+        <img class="flecha12" src="multimedia/Logo Relleno Naranja.png">
     </div>
     </div>
     <!-- Sección 2 -->
